--- a/contributors/ttwf_shenzhen/intel/css3-ui/text-overflow-002.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/text-overflow-002.html
@@ -6,14 +6,13 @@
 <link rel="help" title="8.2. Overflow Ellipsis: the 'text-overflow' property" href="http://www.w3.org/TR/css3-ui/#text-overflow">
 <link rel="match" href="reference/text-overflow-002-ref.html">
 <meta name="flags" content="">
-<meta name="assert" content="Test checks that the broken content replaced by ellipsis(...)">
+<meta name="assert" content="Test checks that an ellipsis (...) is shown instead of overflowing textual content">
 <style>
   div {
-    font-size: 20px;
-    height: 40px;
+    font-size: 10px;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 170px;
+    width: 150px;
   }
   span {
     font-family: Ahem;
@@ -22,7 +21,7 @@
 </style>
 <body>
   <p>PREREQUISITE: The font used must have a glyph for the U+2026 character.</p>
-  <p>Test passes if there is <strong>ellipsis</strong> after characters <strong>TestChecks</strong> below.</p>
+  <p>Test passes if there is an <strong>ellipsis</strong> after a black rectangle below.</p>
   <div>
     <span>TestChecksThatTheBrokenContentRepalcedByEllipsis</span>
   </div>
