Repair the user operation

--- a/contributors/ttwf_shenzhen/intel/css3-ui/resize-003.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/resize-003.html
@@ -23,7 +23,7 @@
   }
 </style>
 <body>
-  <p>Test passes if both the height and width of the <strong>green</strong> border square inside blue square can be adjusted.</p>
+  <p>Test passes if both the height and width of the <strong>green</strong> border square inside blue square can be adjusted(for instance by dragging the bottom-right corner).</p>
   <div id="parent">
     <div id="child"></div>
   </div>
