--- a/contributors/ttwf_shenzhen/intel/css3-ui/resize-006.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/resize-006.html
@@ -16,6 +16,6 @@
   }
 </style>
 <body>
-  <p>Test passes if only <strong>height</strong> of blue border square below can be adjusted.</p>
+  <p>Test passes if only <strong>height</strong> of blue border square below can be adjusted(for instance by dragging the bottom-right corner).</p>
   <div id="test"></div>
 </body>
