--- a/contributors/ttwf_shenzhen/intel/css3-ui/resize-007.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/resize-007.html
@@ -15,6 +15,6 @@
   }
 </style>
 <body>
-  <p>Test passes if <strong>neither</strong> the height <strong>nor</strong> the width of the blue border square can be adjusted.</p>
+  <p>Test passes if <strong>neither</strong> the height <strong>nor</strong> the width of the blue border square can be adjusted(for instance by dragging the bottom-right corner).</p>
   <div id="test"></div>
 </body>
