--- a/contributors/ttwf_shanghai/css3-grid-layout/hax/submitted/grid-layout-properties.html
+++ b/contributors/ttwf_shanghai/css3-grid-layout/hax/submitted/grid-layout-properties.html
@@ -5,7 +5,7 @@
   <title>CSS Test: Grid Layout - Properties exist</title>
   <link rel="author" title="贺师俊" href="mailto:johnhax@gmail.com">
   <link rel="reviewer" title="Dayang Shen" href="mailto:shendayang@baidu.com"> <!-- 2013-09-30 -->
-  <link rel="help" href="http://www.w3.org/TR/css3-grid-layout/#property-index">
+  <link rel="help" href="http://www.w3.org/TR/css-grid-3/#property-index">
   <meta name="flags" content="dom">
   <meta name="assert" content="Test checks that css properties of grid layout exist.">
   <script src="/resources/testharness.js"></script>
