--- a/resource-timing/test_resource_timing.html
+++ b/resource-timing/test_resource_timing.html
@@ -6,8 +6,8 @@
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
         <link rel="help" href="http://w3c-test.org/webperf/specs/ResourceTiming/"/>
         
-        <script src="http://w3c-test.org/resources/testharness.js"></script>
-        <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
+        <script src="/resources/testharness.js"></script>
+        <script src="/resources/testharnessreport.js"></script>
         <script src="resources/webperftestharness.js"></script>
         
         <script>
