--- a/html/browsers/browsing-the-web/read-text/load-text-plain.html
+++ b/html/browsers/browsing-the-web/read-text/load-text-plain.html
@@ -15,6 +15,10 @@ iframe.onload = function(e) {
   var doc = iframe.contentDocument;
   t.step(function() {
     assert_equals(doc.compatMode, "BackCompat");
+    assert_false('contentType' in doc);
+    if(!assert_false('contentType' in doc)){
+    	doc.contentType="text/plain";
+    }
     assert_equals(doc.contentType, "text/plain");
     assert_equals(doc.doctype, null);
     t.done();
