Adding flexbox cases

--- a/contributors/microsoft/submitted/CSS3/background/border-radius-different-width-001.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-different-width-001.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>CSS Test: Adjoining borders with different thicknesses show a smooth transition between the thicker and the thinner borders</title>
+        <title>CSS Test: Adjoining borders with different thicknesses show a smooth transition between the thicker and the thinner borders.</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
         <link rel="help" href="http://www.w3.org/TR/css3-background/#border-radius" />
         <meta name="flags" content="" />
@@ -52,21 +52,19 @@
     <body>
         <p>Test passes if the boxes have rounded corners and show a smooth transition between the thicker and the thinner sides.</p>
         <table>
-            <tr>
-                <td>
-                    <div id="test1"></div>
-                    <div id="test2"></div>
-                    <div id="test3"></div>
-                </td>
-                <td>
-                    <div id="test4"></div>
-                    <div id="test5"></div>
-                    <div id="test6"></div>
-                </td>
-                <td>
-                    <div id="test7"></div>
-                </td>
-            </tr>
+            <td>
+                <div id="test1"></div>
+                <div id="test2"></div>
+                <div id="test3"></div>
+            </td>
+            <td>
+                <div id="test4"></div>
+                <div id="test5"></div>
+                <div id="test6"></div>
+            </td>
+            <td>
+                <div id="test7"></div>
+            </td>
         </table>
     </body>
 </html>
