--- a/contributors/microsoft/submitted/CSS3/background/border-radius-not-inherited-001.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-not-inherited-001.htm
@@ -17,7 +17,7 @@
                 border: 1px solid transparent;
                 border-radius: 100px;
             }
-            div div
+            #child
             {
                 border: medium solid black;
             }
@@ -32,7 +32,7 @@
     <body>
         <p>Test passes if there is a square and a circle below.</p>
         <div id="parent">
-            <div></div>
+            <div id="child"></div>
         </div>
         <div id="reference"></div>
     </body>
