--- a/contributors/microsoft/submitted/CSS3/background/border-radius-shorthand-001.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-shorthand-001.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>CSS Test: 'Border-radius' shorthand is used to set all four 'border-[*]-radius' properties</title>
+        <title>CSS Test: 'Border-radius' shorthand is used to set all four 'border-[*]-radius' properties.</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
         <link rel="help" href="http://www.w3.org/TR/css3-background/#border-radius" />
         <meta name="flags" content="" />
@@ -45,16 +45,14 @@
     <body>
         <p>Test passes if there are two black boxes with rounded corners and red is not visible on the page.</p>
         <table>
-            <tr>
-                <td>
-                    <div id="reference1"></div>
-                    <div id="test1"></div>
-                </td>
-                <td>
-                    <div id="reference2"></div>
-                    <div id="test2"></div>
-                </td>
-            </tr>
+            <td>
+                <div id="reference1"></div>
+                <div id="test1"></div>
+            </td>
+            <td>
+                <div id="reference2"></div>
+                <div id="test2"></div>
+            </td>
         </table>
     </body>
 </html>
