--- a/contributors/microsoft/submitted/CSS3/background/border-radius-style-001.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-style-001.htm
@@ -3,8 +3,7 @@
     <head>
         <title>CSS Test: 'Border-radius' is set with 'border-style: dotted'</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
-        <link rel="help" href="http://www.w3.org/TR/css3-background/#the-border-style" />
-        <link rel="help" href="http://www.w3.org/TR/css3-background/#dotted" />
+        <link rel="help" href="http://www.w3.org/TR/css3-background/" />
         <meta name="flags" content="" />
         <meta name="assert" content="'Border-style: dotted' follows the curve of the border." />
         <style type="text/css">
@@ -17,12 +16,12 @@
                 border-top-color: purple;
                 border-right-color: green;
                 border-bottom-color: blue;
-                border-left-color: orange;
+                border-left-color: #808080;
             }
         </style>
     </head>
     <body>
-        <p>Test passes if there is a rounded border with purple dots on the top, green on the right side, blue on the bottom side, and orange on the left side.</p>
+        <p>Test passes if there is a rounded border with purple dots on the top, green on the right side, blue on the bottom side, and grey on the left side.</p>
         <div></div>
     </body>
 </html>
