--- a/contributors/microsoft/submitted/CSS3/background/border-radius-sum-of-radii-001.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-sum-of-radii-001.htm
@@ -25,23 +25,23 @@
             }
             #reference2
             {
-                border-radius: 0 100px 0 20px;
+                border-radius: 0px 100px 0px 20px;
             }
             #test2
             {
                 margin-top: -100px;
                 border-color: black;
-                border-radius: 0 150px 0 30px;
+                border-radius: 0px 150px 0px 30px;
             }
             #reference3
             {
-                border-radius: 100px 0 20px 0;
+                border-radius: 100px 0px 20px 0px;
             }
             #test3 
             {
                 margin-top: -100px;
                 border-color: black;
-                border-radius: 150px 0 30px 0;
+                border-radius: 150px 0px 30px 0px;
             }
             #reference4
             {
