--- a/contributors/microsoft/submitted/CSS3/background/border-top-left-radius-values-003.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-top-left-radius-values-003.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>CSS Test: 'Border-top-left-radius' with one value as 0</title>
+        <title>CSS Test: 'Border-top-left-radius' with one value as 0.</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
         <link rel="help" href="http://www.w3.org/TR/css3-background/#border-top-left-radius" />
         <meta name="flags" content="" />
@@ -19,31 +19,29 @@
             }
             #test1
             {
-                border-top-left-radius : 0 80px;
+                border-top-left-radius : 0px 80px;
             }
             #test2
             {
-                border-top-left-radius : 80px 0;
+                border-top-left-radius : 80px 0px;
             }
             #test3
             {
-                border-top-left-radius : 0 0;
+                border-top-left-radius : 0px 0px;
             }
         </style>
     </head>
     <body>
         <p>Test passes if the four boxes are identical.</p>
         <table>
-            <tr>
-                <td>
-                    <div id="reference"></div>
-                    <div id="test1"></div>
-                </td>
-                <td>
-                    <div id="test2"></div>
-                    <div id="test3"></div>
-                </td>
-            </tr>
+            <td>
+                <div id="reference"></div>
+                <div id="test1"></div>
+            </td>
+            <td>
+                <div id="test2"></div>
+                <div id="test3"></div>
+            </td>
         </table>
     </body>
 </html>
