--- a/contributors/microsoft/submitted/CSS3/background/border-radius-applies-to-010.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-applies-to-010.htm
@@ -1,12 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>CSS Test: 'Border-radius' applied to an element with a display of 'none'</title>
+        <title>CSS Test: 'Border-radius' applied to element with a display of 'none'.</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
-        <link rel="help" href="http://www.w3.org/TR/css3-background/#the-border-radius" />
         <link rel="help" href="http://www.w3.org/TR/css3-background/#border-radius" />
         <meta name="flags" content="" />
-        <meta name="assert" content="When 'border-radius' property is applied to elements with a display of 'none' it does not have a rendered layout." />
+        <meta name="assert" content="When 'border-radius' property is applied to elements with a display of 'none' then it continues to not have a layout." />
         <style type="text/css">
             div
             {
