--- a/contributors/microsoft/submitted/CSS3/background/border-radius-applies-to-014.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-applies-to-014.htm
@@ -1,9 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>CSS Test: 'Border-radius' with 'display' set to 'table-header-group' and 'border-collapse: collapse'</title>
+        <title>CSS Test: 'Border-radius' should be ignored in element with 'display' set to 'table-header-group' when 'border-collapse: collapse'.</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
-        <link rel="help" href="http://www.w3.org/TR/css3-background/#the-border-radius" />
         <link rel="help" href="http://www.w3.org/TR/css3-background/#border-radius" />
         <meta name="flags" content="" />
         <meta name="assert" content="'Border-radius' should not produce rounded corners when applied to an element with 'display' set to 'table-header-group' when 'border-collapse: collapse'." />
