--- a/contributors/microsoft/submitted/CSS3/background/border-radius-applies-to-017.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-applies-to-017.htm
@@ -1,17 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>CSS Test: 'Border-radius' applied to element with 'display' set to 'inherit'</title>
+        <title>CSS Test: 'Border-radius' applied to element with 'display' set to 'inherit'.</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
         <link rel="help" href="http://www.w3.org/TR/css3-background/#border-radius" />
         <meta name="flags" content="" />
-        <meta name="assert" content="When 'border-radius' is applied to an element with 'display: inherit' it produces rounded corners." />
+        <meta name="assert" content="When 'border-radius' is applied to an element with 'displaye: inherit' it produces rounded corners." />
         <style type="text/css">
             #container
             {
                 display: block;
             }
-            div div
+            #test
             {
                 display: inherit;
                 height: 1in;
@@ -24,7 +24,7 @@
     <body>
         <p>Test passes if there is a box with rounded corners below</p>
         <div id="container">
-            <div></div>
+            <div id="test"></div>
         </div>
     </body>
 </html>
