--- a/contributors/microsoft/submitted/CSS3/background/border-radius-sum-of-radii-002.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-sum-of-radii-002.htm
@@ -25,7 +25,7 @@
             }
             #reference2
             {
-                border-radius: 0 100px 0 0;
+                border-radius: 0px 100px 0px 0px;
             }
             #test2
             {
@@ -35,7 +35,7 @@
             }
             #reference3
             {
-                border-radius: 0 0 0 0;
+                border-radius: 0px 0px 0px 0px;
             }
             #test3
             {
