--- a/contributors/microsoft/submitted/CSS3/background/border-top-left-radius-values-001.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-top-left-radius-values-001.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>CSS Test: 'Border-top-left-radius' with two values</title>
+        <title>CSS Test: 'Border-top-left-radius' with two values.</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
         <link rel="help" href="http://www.w3.org/TR/css3-background/#border-top-left-radius" />
         <meta name="flags" content="" />
