Repair the elements' border and position

--- a/contributors/ttwf_shenzhen/intel/css3-ui/outline-style-002.html
+++ b/contributors/ttwf_shenzhen/intel/css3-ui/outline-style-002.html
@@ -27,7 +27,7 @@
   }
 </style>
 <body>
-  <p>Test passes if there is a blank border with <strong>green dotted</strong> centered of a blue dotted border.</p>
+  <p>Test passes if there is a blank square with <strong>a green dotted</strong> border centered inside a blue dotted border.</p>
   <div id="parent">
     <div id="child"></div>
   </div>
