--- a/contributors/microsoft/submitted/CSS3/background/border-radius-content-edge-001.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-radius-content-edge-001.htm
@@ -1,26 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>CSS Test: 'Border-radius' applied to element with 'display' set to 'inherit'.</title>
+        <title>CSS Test: 'Border-radius' set to 'img'</title>
         <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
         <link rel="help" href="http://www.w3.org/TR/css3-background/#border-radius" />
         <meta name="flags" content="" />
-        <meta name="assert" content="When 'border-radius' is applied to an element with 'displaye: inherit' it produces rounded corners." />
+        <meta name="assert" content="The content of replaced element 'img' is trimmed to the content edge curve of a rounded corner." />
         <style type="text/css">
-            div div
+            img 
             {
-                display: inherit;
+                border-radius: 50px;
+                padding: 10px;
+                border: 10px solid black;
                 height: 1in;
                 width: 1in;
-                border: solid green;
-                border-radius: 10px;
             }
         </style>
     </head>
     <body>
-        <p>Test passes if there is a box with rounded corners below</p>
-        <div>
-            <div></div>
-        </div>
+        <p>Test passes if there is no red visible on the page.</p>
+        <img src="../support/black_red.png" />
     </body>
 </html>
