--- a/contributors/microsoft/submitted/CSS3/background/border-top-left-radius-values-003.htm
+++ b/contributors/microsoft/submitted/CSS3/background/border-top-left-radius-values-003.htm
@@ -19,29 +19,31 @@
             }
             #test1
             {
-                border-top-left-radius : 0px 80px;
+                border-top-left-radius : 0 80px;
             }
             #test2
             {
-                border-top-left-radius : 80px 0px;
+                border-top-left-radius : 80px 0;
             }
             #test3
             {
-                border-top-left-radius : 0px 0px;
+                border-top-left-radius : 0 0;
             }
         </style>
     </head>
     <body>
         <p>Test passes if the four boxes are identical.</p>
         <table>
-            <td>
-                <div id="reference"></div>
-                <div id="test1"></div>
-            </td>
-            <td>
-                <div id="test2"></div>
-                <div id="test3"></div>
-            </td>
+            <tr>
+                <td>
+                    <div id="reference"></div>
+                    <div id="test1"></div>
+                </td>
+                <td>
+                    <div id="test2"></div>
+                    <div id="test3"></div>
+                </td>
+            </tr>
         </table>
     </body>
 </html>
