--- a/dom/nodes/Comment-constructor.html
+++ b/dom/nodes/Comment-constructor.html
@@ -5,7 +5,6 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
-<iframe></iframe>
 <script>
 test(function() {
   var comment = new Comment();
@@ -75,10 +74,11 @@ test(function() {
 }, "new Comment(): two arguments")
 
 async_test("new Comment() should get the correct ownerDocument across globals").step(function() {
-  var iframe = document.getElementsByTagName("iframe")[0];
+  var iframe = document.createElement("iframe");
   iframe.onload = this.step_func_done(function() {
     var comment = new iframe.contentWindow.Comment();
     assert_equals(comment.ownerDocument, iframe.contentDocument);
   });
+  document.body.appendChild(iframe);
 });
 </script>
