Fix tests for parsing template elements inside XHTML documents.
Because XML documents used in node-document.html and template-child-nodes.html to parse template elements
didn't have the default namespace set by xmlus, template elements were being parsed as elements outside
of the html namespace. Fixed the tests by explicitly setting xmlns attribute on the document element to
the html's namespace URI.

Also self-closed link elements in two XHTML documents inside the resource directory under html-templates
as they were encountering parser errors.

--- a/html-templates/additions-to-parsing-xhtml-documents/node-document.html
+++ b/html-templates/additions-to-parsing-xhtml-documents/node-document.html
@@ -19,6 +19,7 @@
 
 test(function() {
     var doc = newXHTMLDocument();
+    doc.documentElement.setAttribute('xmlns', 'http://www.w3.org/1999/xhtml');
     doc.body = doc.createElement('body');
     doc.body.innerHTML = '<template id="tmpl"></template>';
 
@@ -42,7 +43,7 @@ test(function() {
 
 test(function() {
     var doc = newXHTMLDocument();
-
+    doc.documentElement.setAttribute('xmlns', 'http://www.w3.org/1999/xhtml');
     doc.body = doc.createElement('body');
     doc.body.innerHTML = '<template id="tmpl"><div>Div content</div></template>';
 
@@ -68,6 +69,7 @@ test(function() {
 
 test(function() {
     var doc = newXHTMLDocument();
+    doc.documentElement.setAttribute('xmlns', 'http://www.w3.org/1999/xhtml');
     doc.body = doc.createElement('body');
     doc.body.innerHTML = ''
             + '<template id="tmpl"><div>Div content</div> And some more text'
