Test the ping attribute, plus some minor fixes

--- a/html/infrastructure/urls/resolving-urls/utf-8.html
+++ b/html/infrastructure/urls/resolving-urls/utf-8.html
@@ -3,5 +3,6 @@
 <title>Resolving URLs, URL character encoding, utf-8</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
+<script src="/common/utils.js"></script>
 <div id=log></div>
 <script src="resolve-url.js?expected=utf8&pipe=sub"></script>
