--- a/html/infrastructure/urls/resolving-urls/windows-1251.html
+++ b/html/infrastructure/urls/resolving-urls/windows-1251.html
@@ -3,5 +3,6 @@
 <title>Resolving URLs, URL character encoding, windows-1251</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
+<script src="/common/utils.js"></script>
 <div id=log></div>
 <script src="resolve-url.js?expected=error_url&pipe=sub"></script>
