Reference the correct variable in Range-collapse.html.

--- a/dom/ranges/Range-collapse.html
+++ b/dom/ranges/Range-collapse.html
@@ -64,8 +64,8 @@ for (var i = 0; i < testRanges.length; i++) {
 		false
 	]);
 	tests.push([
-		"Range " + i + " " + ranges[i] + ", toStart omitted",
-		eval(ranges[i]),
+		"Range " + i + " " + testRanges[i] + ", toStart omitted",
+		eval(testRanges[i]),
 		undefined
 	]);
 }
