--- a/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-inset-rectangle-003.html
+++ b/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-inset-rectangle-003.html
@@ -14,7 +14,7 @@
 #shape{
     width: 300px;
     height: 300px;
-    shape-outside: inset-rectangle(-50px, -50, 50px, 50px, 50, 50%);
+    shape-outside: inset-rectangle(50px, 50px, 50px, 50px, 50, 50%);
 }
     </style>
 </head>
