--- a/html/semantics/document-metadata/the-base-element/base_href_empty.html
+++ b/html/semantics/document-metadata/the-base-element/base_href_empty.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Test: base_href_empty</title>
-    <link rel="author" title="Intel" href="http://www.intel.com/">
-    <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/document-metadata.html#the-base-element">
-    <base id="base" href="" target="_blank">
-    <script src="/resources/testharness.js"></script>
-    <script src="/resources/testharnessreport.js"></script>
-  </head>
-  <body>
-    <div id="log"></div>
-    <img id="test" src="/images/blue-100x100.png" style="display:none">
+<meta charset="utf-8">
+<title>HTML Test: base_href_empty</title>
+<link rel="author" title="Intel" href="http://www.intel.com/">
+<link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/document-metadata.html#the-base-element">
+<base id="base" href="" target="_blank">
+<script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
+<div id="log"></div>
+<img id="test" src="/images/blue-100x100.png" style="display:none">
 
-    <script>
-      var testElement,
-          baseElement;
+<script>
+  var testElement,
+      baseElement;
 
-      setup(function() {
-        testElement = document.getElementById("test");
-        baseElement = document.getElementById("base");
-      });
+  setup(function() {
+    testElement = document.getElementById("test");
+    baseElement = document.getElementById("base");
+  });
 
-      test(function() {
-        assert_equals(baseElement.href, document.location.href, "The href of base element is incorrect.");
-      }, "base_href_empty");
+  test(function() {
+    assert_equals(baseElement.href, document.location.href, "The href of base element is incorrect.");
+  }, "The value of the href attribute must be the document's address if it is empty");
 
-      test(function() {
-        var exp = testElement.src.substring(0, testElement.src.lastIndexOf("/images/blue-100x100.png") + 1);
-        assert_true(baseElement.href.indexOf(exp) != -1, "The src of img element is incorrect.");
-      }, "base_href_empty_for_img");
-    </script>
-  </body>
-</html>
-
+  test(function() {
+    var exp = testElement.src.substring(0, testElement.src.lastIndexOf("/images/blue-100x100.png") + 1);
+    assert_true(baseElement.href.indexOf(exp) != -1, "The src of img element is incorrect.");
+  }, "The src attribute of the img element must relative to document's address");
+</script>
