--- a/html/semantics/embedded-content-0/the-embed-element/embed_represent_nothing_object_ancestor_manual.html
+++ b/html/semantics/embedded-content-0/the-embed-element/embed_represent_nothing_object_ancestor_manual.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Test: embed_represent_nothing_object_ancestor</title>
-    <link rel="author" title="Intel" href="http://www.intel.com">
-    <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/embedded-content-0.html#the-embed-element">
-    <link rel="match" href="embed_represent_nothing_ref.html">
-    <meta name="assert" content="Check if the embed element represents nothing when it has a object ancestor is not showing its fallback content">
-    <style>
-      embed {
-        background-color: red;
-        height: 100px;
-        width: 100px;
-      }
-    </style>
-  </head>
-  <body>
-    <p>Test passes if there is <strong>no red</strong>.</p>
-    <object type="application/x-shockwave-flash">
-      <embed src="images/red-16x16.png">
-    </object>
-  </body>
-</html>
-
+<meta charset="utf-8">
+<title>HTML Test: Has an object ancestor</title>
+<link rel="author" title="Intel" href="http://www.intel.com">
+<link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/embedded-content-0.html#the-embed-element">
+<link rel="match" href="embed_represent_nothing_ref.html">
+<meta name="assert" content="Check if the embed element represents nothing when it has a object ancestor is not showing its fallback content">
+<style>
+  embed {
+    background-color: red;
+    height: 100px;
+    width: 100px;
+  }
+</style>
+<body>
+  <p>Test passes if there is <strong>no red</strong>.</p>
+  <object type="application/x-shockwave-flash">
+    <embed src="/images/red-16x16.png">
+  </object>
+</body>
