--- a/html/semantics/embedded-content-0/the-embed-element/embed_represent_nothing_without_src_type_manual.html
+++ b/html/semantics/embedded-content-0/the-embed-element/embed_represent_nothing_without_src_type_manual.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Test: embed_represent_nothing_created_without_src_and_type</title>
-    <link rel="author" title="Intel" href="http://www.intel.com">
-    <link rel="help" href="http://www.w3.org/TR/2012/CR-html5-20121217/embedded-content-0.html#the-embed-element">
-    <link rel="match" href="embed_represent_nothing_ref.html">
-    <meta name="assert" content="Check if the embed element represents nothing when it is created without src and type attributes">
-    <style>
-      embed {
-        background-color: red;
-        height: 100px;
-        width: 100px;
-      }
-    </style>
-  </head>
-  <body>
-    <p>Test passes if there is <strong>no red</strong>.</p>
-    <embed>
-  </body>
-</html>
-
+<meta charset="utf-8">
+<title>HTML Test: Without src and type attributes</title>
+<link rel="author" title="Intel" href="http://www.intel.com">
+<link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/embedded-content-0.html#the-embed-element">
+<link rel="match" href="embed_represent_nothing_ref.html">
+<meta name="assert" content="Check if the embed element represents nothing when it is created without src and type attributes">
+<style>
+  embed {
+    background-color: red;
+    height: 100px;
+    width: 100px;
+  }
+</style>
+<body>
+  <p>Test passes if there is <strong>no red</strong>.</p>
+  <embed>
+</body>
