Minor comment change in drawSystemFocusRing_004

--- a/2dcontext/drawing-paths-to-the-canvas/drawSystemFocusRing_004.html
+++ b/2dcontext/drawing-paths-to-the-canvas/drawSystemFocusRing_004.html
@@ -82,7 +82,7 @@
           assert_false(identical, "A focus ring appears in the canvas");
 
 
-      }, 'drawSystemFocusRing does not draw a focus ring if the element is not in focus.');
+      }, 'drawSystemFocusRing does draw a focus ring if the element is in focus.');
     })();
     </script>
     <div id="log"></div>
